pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart.strong.transformed.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:14:6: Error: The argument type 'String' can't be assigned to the parameter type 'int'.
//   C0(''); // Error
//      ^
//
// pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:15:6: Error: The argument type 'int' can't be assigned to the parameter type 'bool'.
//   C1(0); // Error
//      ^
//
// pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:16:9: Error: The argument type 'bool' can't be assigned to the parameter type 'String'.
//   C2(c: true); // Error
//         ^
//
// pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:17:9: Error: The argument type 'Null' can't be assigned to the parameter type 'List<int>'.
//  - 'List' is from 'dart:core'.
//   C3(d: null); // Error
//         ^
//
import self as self;
import "dart:core" as core;

extension type C0(dynamic a) {
  abstract extension-type-member representation-field get a() → core::int;
  constructor • = self::C0|constructor#;
  constructor tearoff • = self::C0|constructor#_#new#tearOff;
}
extension type C1(dynamic b) {
  abstract extension-type-member representation-field get b() → core::bool;
  constructor • = self::C1|constructor#;
  constructor tearoff • = self::C1|constructor#_#new#tearOff;
}
extension type C2(dynamic c) {
  abstract extension-type-member representation-field get c() → core::String;
  constructor • = self::C2|constructor#;
  constructor tearoff • = self::C2|constructor#_#new#tearOff;
}
extension type C3(dynamic d) {
  abstract extension-type-member representation-field get d() → core::List<core::int>;
  constructor • = self::C3|constructor#;
  constructor tearoff • = self::C3|constructor#_#new#tearOff;
}
static extension-type-member method C0|constructor#([core::int a = #C1]) → self::C0% /* erasure=dynamic, declared=! */ {
  lowered final self::C0% /* erasure=dynamic, declared=! */ #this = a;
  return #this;
}
static extension-type-member synthetic method C0|constructor#_#new#tearOff([core::int a = #C1]) → self::C0% /* erasure=dynamic, declared=! */
  return self::C0|constructor#(a);
static extension-type-member method C1|constructor#([final core::bool b = #C2]) → self::C1% /* erasure=dynamic, declared=! */ {
  lowered final self::C1% /* erasure=dynamic, declared=! */ #this = b;
  return #this;
}
static extension-type-member synthetic method C1|constructor#_#new#tearOff([core::bool b = #C2]) → self::C1% /* erasure=dynamic, declared=! */
  return self::C1|constructor#(b);
static extension-type-member method C2|constructor#({core::String c = #C3}) → self::C2% /* erasure=dynamic, declared=! */ {
  lowered final self::C2% /* erasure=dynamic, declared=! */ #this = c;
  return #this;
}
static extension-type-member synthetic method C2|constructor#_#new#tearOff({core::String c = #C3}) → self::C2% /* erasure=dynamic, declared=! */
  return self::C2|constructor#(c: c);
static extension-type-member method C3|constructor#({final core::List<core::int> d = #C4}) → self::C3% /* erasure=dynamic, declared=! */ {
  lowered final self::C3% /* erasure=dynamic, declared=! */ #this = d;
  return #this;
}
static extension-type-member synthetic method C3|constructor#_#new#tearOff({core::List<core::int> d = #C4}) → self::C3% /* erasure=dynamic, declared=! */
  return self::C3|constructor#(d: d);
static method test() → dynamic {
  self::C0|constructor#(invalid-expression "pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:14:6: Error: The argument type 'String' can't be assigned to the parameter type 'int'.
  C0(''); // Error
     ^" in "" as{TypeError} core::int);
  self::C1|constructor#(invalid-expression "pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:15:6: Error: The argument type 'int' can't be assigned to the parameter type 'bool'.
  C1(0); // Error
     ^" in 0 as{TypeError} core::bool);
  self::C2|constructor#(c: invalid-expression "pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:16:9: Error: The argument type 'bool' can't be assigned to the parameter type 'String'.
  C2(c: true); // Error
        ^" in true as{TypeError} core::String);
  self::C3|constructor#(d: invalid-expression "pkg/front_end/testcases/primary_constructors/extension_type_parameter_type_inference.dart:17:9: Error: The argument type 'Null' can't be assigned to the parameter type 'List<int>'.
 - 'List' is from 'dart:core'.
  C3(d: null); // Error
        ^" in let Null #t1 = null in #t1 == null ?{core::List<core::int>} #t1 as{TypeError} core::List<core::int> : #t1{core::List<core::int>});
}
static method main() → dynamic {
  self::C0% /* erasure=dynamic, declared=! */ c0a = self::C0|constructor#();
  core::int a1 = c0a as{Unchecked} core::int;
  self::C0% /* erasure=dynamic, declared=! */ c0b = self::C0|constructor#(42);
  core::int a2 = c0b as{Unchecked} core::int;
  self::C1% /* erasure=dynamic, declared=! */ c1a = self::C1|constructor#();
  core::bool b1 = c1a as{Unchecked} core::bool;
  self::C1% /* erasure=dynamic, declared=! */ c1b = self::C1|constructor#(false);
  core::bool b2 = c1b as{Unchecked} core::bool;
  self::C2% /* erasure=dynamic, declared=! */ c2a = self::C2|constructor#();
  core::String c1 = c2a as{Unchecked} core::String;
  self::C2% /* erasure=dynamic, declared=! */ c2b = self::C2|constructor#(c: "bar");
  core::String c2 = c2b as{Unchecked} core::String;
  self::C3% /* erasure=dynamic, declared=! */ c3a = self::C3|constructor#();
  core::List<core::int> d1 = c3a as{Unchecked} core::List<core::int>;
  self::C3% /* erasure=dynamic, declared=! */ c3b = self::C3|constructor#(d: core::_GrowableList::_literal1<core::int>(42));
  core::List<core::int> d2 = c3b as{Unchecked} core::List<core::int>;
}

constants  {
  #C1 = 0
  #C2 = true
  #C3 = "foo"
  #C4 = <core::int>[#C1]
}
